# fluka_neutronstudy

./: .gitignore  CLAUDE.md  PLAN.md  README.md  analyze_results.py  convert_geometry.sh  neutron_bpe.inp  plot_edep.py  run_comparison.py  run_flugg.sh  run_fluka.sh  run_simple.sh
config/: analysis_config.yaml  material_mapping.json  simulation_config.yaml
docker/: Dockerfile.comparison  Dockerfile.flugg  flugg_run.sh  gdml_loader.cc
docker/geant4_app/: CMakeLists.txt
docker/geant4_app/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
docker/geant4_app/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  main.cc
gdml/: bpe_slab.gdml
src/: __init__.py  config_parser.py  fluka_generator.py  geant4_generator.py  runner.py
src/analysis/: __init__.py
